<resources>
    <string name="app_name">MyCheesecakes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_category">Select a category:</string>
    <string name="chocolate">Chocolate</string>
    <string name="chocolate_cake">Chocolate cake</string>
    <string name="fruit">Fruit</string>
    <string name="other">Other</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="cheesecake_name">Cheesecake name</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="picture_of_cheesecake">picture of cheesecake</string>
    <string name="_30">30</string>
    <string name="presentation_practice">presentation practice</string>
    <string name="desserttype">DessertType</string>
    <string name="dessert_category_image">Dessert category image</string>
    <string name="cheesecakes">Cheesecakes</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="cheesecake_flashcard">Cheesecake:</string>
    <string name="crust_flashcard">Crust:</string>
    <string name="dollops_flashcard">Dollops:</string>
    <string name="name_flashcard">Name:</string>
    <string name="nuts_flashcard">Nuts:</string>
    <string name="presentation_flashcard">Presentation:</string>
    <string name="topping_flashcard">Topping:</string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="slash">/</string>
</resources>