<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".ui.quiz.QuizFragment">

    <TextView
        android:id="@+id/cheesecake_question_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="@dimen/large_string_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheesecake_imageview" />



    <TextView
        android:id="@+id/cheesecake_name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/cheesecake_name"
        android:textColor="@color/white"
        android:textSize="@dimen/large_string_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cheesecake_imageview"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:contentDescription="@string/picture_of_cheesecake"
        android:scaleType="centerCrop"
        android:src="@drawable/fresh_strawberry_cheesecake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheesecake_name_textview" />

    <ScrollView
        android:id="@+id/buttons_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cheesecake_question_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_inner_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/answer1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:padding="@dimen/small_margin"
                android:text="@string/answer_1"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/answer2_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/answer2_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="@string/answer_2"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/answer3_button"
                app:layout_constraintEnd_toEndOf="@+id/answer1_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/answer1_button"
                app:layout_constraintTop_toBottomOf="@+id/answer1_button" />

            <Button
                android:id="@+id/answer3_button"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="@string/answer_3"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/answer4_button"
                app:layout_constraintEnd_toEndOf="@+id/answer2_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/answer2_button"
                app:layout_constraintTop_toBottomOf="@+id/answer2_button" />

            <Button
                android:id="@+id/answer4_button"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="@string/answer_4"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/answer3_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/answer3_button"
                app:layout_constraintTop_toBottomOf="@+id/answer3_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




    <TextView
        android:id="@+id/countdownTimerTextView"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/_30"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/cheesecake_imageview"
        app:layout_constraintTop_toBottomOf="@+id/cheesecake_name_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>